# name-game

./: .gitignore  Dockerfile  README.md  justfile  mprocs.yaml  name-game.yaml
backend/: Cargo.toml
backend/config/: base.toml  prod.toml
backend/src/: display.rs  main.rs  messages.rs  player.rs  redis_wrapper.rs  settings.rs  socket.rs
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/src/: App.svelte  app.css
frontend/src/components/: DisconnectionToast.svelte  Display.svelte  NameList.svelte  Player.svelte  Spinner.svelte
frontend/src/lib/: Display.svelte  Player.svelte  messages.ts  reconnecting-socket.ts  state.ts  storage.ts  utils.ts
valkey/local/: compose.yml  justfile  valkey.conf
valkey/prod/: Dockerfile
