[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
bytes = "1.10.1"
config = "0.15.13"
futures = "0.3.31"
miette = { version = "7.6.0", features = ["fancy"] }
rand = "0.9.1"
redis = { version = "0.32.4", default-features = false, features = ["tokio-comp", "script", "keep-alive"] }
rmp-serde = "1.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
